WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72881
JSC/CSSOM: Merge root() for style declaration objects.
https://bugs.webkit.org/show_bug.cgi?id=72881
Summary
JSC/CSSOM: Merge root() for style declaration objects.
Andreas Kling
Reported
2011-11-21 07:15:09 PST
We could fold root(CSSMutableStyleDeclaration) into root(CSSStyleDeclaration).
Attachments
Patch
(1.68 KB, patch)
2011-11-21 07:18 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-11-21 07:18:22 PST
Created
attachment 116080
[details]
Patch
Antti Koivisto
Comment 2
2011-11-21 07:19:27 PST
Comment on
attachment 116080
[details]
Patch r=me
WebKit Review Bot
Comment 3
2011-11-21 09:24:49 PST
Comment on
attachment 116080
[details]
Patch Clearing flags on attachment: 116080 Committed
r100925
: <
http://trac.webkit.org/changeset/100925
>
WebKit Review Bot
Comment 4
2011-11-21 09:24:54 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5
2011-11-29 11:43:50 PST
Looks like this takes a compile time check and makes it a runtime check.
Andreas Kling
Comment 6
2011-11-29 12:05:05 PST
(In reply to
comment #5
)
> Looks like this takes a compile time check and makes it a runtime check.
Thinking about it now, I believe root() might always be getting called with a CSSStyleDeclaration* argument (and never a CSSMutableStyleDeclaration*), hence we would never return the node() as the root for declarations with an associated element. If that's the case, I originally regressed it with <
http://trac.webkit.org/changeset/97985
> and fixed it with this change. I'll take a closer look and see if we can add a layout test for it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug