JSC/CSSOM: Merge root() for style declaration objects. <http://webkit.org/b/72881>

Patch by Andreas Kling <kling@webkit.org> on 2011-11-21
Reviewed by Antti Koivisto.

Fold root(CSSMutableStyleDeclaration*) into root(CSSStyleDeclaration*),
removing a duplicated chunk and making it a little easier on the eyes.

* bindings/js/JSDOMBinding.h:
(WebCore::root):

Canonical link: https://commits.webkit.org/89414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100925 268f45cc-cd09-0410-ab3c-d52691b4dbfc